--- a/src/app/components/model-producto/model-producto.component.html
+++ b/src/app/components/model-producto/model-producto.component.html
@@ -1,1 +1,7 @@
-<p>model-producto works!</p>
+<div class="container">
+    <div class="row">
+          <mat-toolbar color="primary" >    
+            <span>Busca Producto</span>    
+          </mat-toolbar>  
+    </div>
+</div>
