--- a/src/app/components/model-cliente/model-cliente.component.html
+++ b/src/app/components/model-cliente/model-cliente.component.html
@@ -1,1 +1,7 @@
-<p>model-cliente works!</p>
+<div class="container">
+      <div class="row">
+            <mat-toolbar color="primary" >    
+              <span>Busca Cliente</span>    
+            </mat-toolbar>  
+      </div>
+</div>
