--- a/src/app/components/model-cliente/model-cliente.component.html
+++ b/src/app/components/model-cliente/model-cliente.component.html
@@ -4,4 +4,39 @@
               <span>Busca Cliente</span>    
             </mat-toolbar>  
       </div>
+      <div class="row" style="margin-top: 3%">
+            <mat-form-field class="col-md-5">
+                <mat-label >Nombre</mat-label>
+                <input  matInput >
+            </mat-form-field>
+      </div>
+
+      <div class="row" style="margin-top: 3%">
+            <mat-table  #table  class="mat-cell" [dataSource]="dataSource" >
+                  <ng-container matColumnDef="idCliente">
+                    <mat-header-cell  mat-header-cell *matHeaderCellDef >Código</mat-header-cell>
+                    <mat-cell *matCellDef="let aux" >{{ aux.idCliente  }}</mat-cell>
+                  </ng-container>
+                  <ng-container matColumnDef="nombre">
+                    <mat-header-cell  mat-header-cell *matHeaderCellDef >Nombre</mat-header-cell>
+                    <mat-cell *matCellDef="let aux" >{{ aux.nombre}}</mat-cell>
+                  </ng-container>
+                  <ng-container matColumnDef="apellido">
+                    <mat-header-cell  mat-header-cell *matHeaderCellDef >Apellido</mat-header-cell>
+                    <mat-cell *matCellDef="let aux" >{{ aux.apellido }}</mat-cell>
+                  </ng-container>
+                  <ng-container matColumnDef="actions">
+                    <mat-header-cell  mat-header-cell *matHeaderCellDef >&nbsp;</mat-header-cell>
+                    <mat-cell *matCellDef="let aux; let i=index;">
+                         <button mat-icon-button color="accent" >
+                            <mat-icon aria-label="Delete">Seleccione</mat-icon>
+                         </button>
+                    </mat-cell>
+                  </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
+            </mat-table>
+            <mat-paginator [pageSizeOptions]="[6,8,10]" showFirstLastButtons></mat-paginator>
+      </div>
+
 </div>
