--- a/src/app/components/model-cliente/model-cliente.component.css
+++ b/src/app/components/model-cliente/model-cliente.component.css
@@ -1,8 +1,7 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    min-width: 800px;
-    min-height: 400px;
+ 
+    width: 1000px;
+    height: 600px;
   }
   
   .container > * {
