--- a/src/app/components/model-cliente/model-cliente.component.html
+++ b/src/app/components/model-cliente/model-cliente.component.html
@@ -7,7 +7,7 @@
       <div class="row" style="margin-top: 3%">
             <mat-form-field class="col-md-5">
                 <mat-label >Nombre</mat-label>
-                <input  matInput >
+                <input  matInput #txtVal (keyup)="applyFilter()" [(ngModel)] ="filtro"  >
             </mat-form-field>
       </div>
 
@@ -28,15 +28,20 @@
                   <ng-container matColumnDef="actions">
                     <mat-header-cell  mat-header-cell *matHeaderCellDef >&nbsp;</mat-header-cell>
                     <mat-cell *matCellDef="let aux; let i=index;">
-                         <button mat-icon-button color="accent" >
-                            <mat-icon aria-label="Delete">Seleccione</mat-icon>
-                         </button>
-                    </mat-cell>
+                      <button mat-raised-button color="primary"  (click)="seleccioneCliente(aux)" >
+                          <mat-icon>check_circle_outline</mat-icon>
+                      </button>
+                  </mat-cell>
                   </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
             </mat-table>
-            <mat-paginator [pageSizeOptions]="[6,8,10]" showFirstLastButtons></mat-paginator>
+            <mat-paginator [pageSizeOptions]="pageSizeOptions" 
+                            showFirstLastButtons
+                            [pageSize]="pageSize"
+                            (page)="onPageChange($event)"
+                            [length]="dataSource.data ? dataSource.data.length : 0">
+                          </mat-paginator>
       </div>
 
 </div>
