--- a/src/app/components/model-producto/model-producto.component.css
+++ b/src/app/components/model-producto/model-producto.component.css
@@ -2,8 +2,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-width: 800px;
-    min-height: 400px;
+    width: 1000px;
+    height: 600px;
   }
   
   .container > * {
